fix alignment of generate button

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -74,6 +74,7 @@
   border-radius: 3px;
   color: white;
   padding: 0 20px;
+  margin: 0 auto;
 }
 
 .App-container-item-border-box {
